# acfx

./: .coveragerc  .gitignore  .readthedocs.yaml  README.md  pyproject.toml  pytest.ini  questionaiire_suplement.ipynb  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.run/: benchmark.run.xml  pytest in user.run.xml  streamlit.run.xml  tests.run.xml
dataset/: column_mapping.json  column_types.py  german_credit_data.ipynb  german_credit_numeric.csv  legend.txt  readme
docs/: api.rst  basic_examples.rst  conf.py  contributing.rst  index.rst  release_notes.rst
docs/abstract/: acfx.abstract.ModelBasedCounterOptimizer.rst  acfx.abstract.OptimizerType.rst
docs/counterfactual_generation/: acfx.evaluation.ccfs.rst
docs/explanation_api/: acfx.ACFX.rst  acfx.AcfxCustom.rst  acfx.AcfxEBM.rst  acfx.AcfxLinear.rst
src/: BenchmarkNotebook.ipynb  pyproject.toml
src/acfx/: ACFX.py  AcfxCustom.py  AcfxEBM.py  AcfxLinear.py  RandomSearchCounterOptimizer.py  __init__.py  acfx.py  acfx_custom.py  acfx_ebm.py  acfx_linear.py  model.py
src/acfx/abstract/: ModelBasedCounterOptimizer.py  OptimizerType.py  __init__.py
src/acfx/benchmark/: BenchmarkNotebook.ipynb  ExplainersRegistry.py  main.py
src/acfx/benchmark/data/: CustomData.py  DataRecipe.py  consts.py  data.py
src/acfx/benchmark/model/LORE/: experiment_lore_vs_anchor.py  gpdatagenerator.py  lore.py  neighbor_generator.py  pyyadt.py  stability_lore_vs_anchor.py  test_anchor.py  test_dt_counterfactual.py  test_lime.py  test_lore_evaluate.py  test_neighbors.py  test_pyyadt.py  test_stochastic_counterfactuals.py
src/acfx/benchmark/tools/: CCStats.py  utils.py
src/acfx/data/: DataRecipe.py  OpenmlData.py  __init__.py
src/acfx/evaluation/: EBMCounterOptimizer.py  LogisticRegressionCounterOptimizer.py  __init__.py  bayesian_model.py  ccfs.py  loss.py  multi_dataset_evaluation.py  utils.py
src/acfx/model/LORE/yadt/: dataset.data  dataset.names
src/acfx/tests/: acfx_0_3_6_online_tutorial.ipynb  consts.py  test_acfx_bayesian_causality.py  test_acfx_custom.py  test_acfx_ebm.py  test_acfx_linear.py  test_adjacency.py  test_basic_examples.py  test_generate_cfs.py  test_generate_single_cf.py  test_multi_dataset_evaluation.py  test_optimizer_iteration.py  transformed_ready_for_acfx.csv
src/app/: README.md  Welcome to the ACFX.py  german_credit_numeric.csv  hello.py  requirements.txt
src/app/pages/: 1 Data Selection.py  1_Data_Selection.py  1_data_selection.py  2 Classifier selection.py  2_Classifier_Selection.py  2_classifier_selection.py  3 Adjacency Generation.py  3_Adjacency_Generation.py  4_Evaluation_Settings.py  5_Run.py  classifier_selection.py  data_selection.py
src/app/utils/: const.py  features_by_type.py  key_helper.py  params_initializing.py  session_state.py
src/refactor/: main.py
src/refactor/abstract/: ModelBasedCounterOptimizer.py  OptimizerType.py
src/refactor/benchmark/: ExplainersRegistry.py
src/refactor/evaluation/: EBMCounterOptimizer.py  LogisticRegressionCounterOptimizer.py  bayesian_optimization.py  casual_counterfactuals.py  multi_dataset_evaluation.py
src/refactor/model/: bayesian_optimization.py  ccfs.py
src/refactor/tests/: bayesian_optimization_tests.py  consts.py  multi_dataset_evaluation_tests.py  test_acfx_ebm.py  test_generate_cfs.py  test_generate_single_cf.py  test_optimizer_iteration.py
src/refactor/tools/: CCStats.py  latex_helper.py
