[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acfx"
version = "0.1.0"
description = "Actionable Counterfactual eXplanations"
readme = "README.md"
authors = [{ name = "Szymon Bobek", email = "szymon.bobek@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["xai", "tabular data","explainability", "model-agnostic", "counterfactual", "causal"]
dependencies = ["pandas>=1.4.3",    #minimal set of requirements fro the project (not benchmark)
    "numpy>=1.22.4,<2.0",
    "scikit-learn>=1.1.1",
    "matplotlib>=3.5.2",
    "matplotlib-inline>=0.1.3",
    "seaborn>=0.11.2",
    "graphviz>=0.20",
    "shap>=0.41.0",
    "ruptures>=1.1.8",
    "tslearn>=0.6.1",
    "kshape>=1.0.6",
    "sktime>=0.29.0",
    "scikit-learn-extra>=0.3.0"
    ]
requires-python = ">=3.8"


[project.optional-dependencies]
benchmark = ["torch>=2.0.1"] # Optional dependencies for benchmarking in current requirements file

[tool.setuptools.packages.find]
include = ["acfx*"]  # Default: Include `acfx` and subpackages
exclude = ["acfx.model"]  # Exclude `acfx.model` by default

[project.urls]
Homepage = "https://github.com/sbobek/acfx"
Documentation = "https://acfx.readthedocs.org"
Issues = "https://github.com/sbobek/acfx/issues"
