[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acfx"
version = "0.1.0"
description = "Actionable Counterfactual eXplanations"
readme = "README.md"
authors = [{ name = "Szymon Bobek", email = "szymon.bobek@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["xai", "tabular data","explainability", "model-agnostic", "counterfactual", "causal"]
#dependencies = ["pandas>=1.4.3",    #minimal set of requirements from the project (not benchmark)
#    "matplotlib>=3.5.2",
#    "matplotlib-inline>=0.1.3",
#    "seaborn>=0.11.2",
#    "graphviz>=0.20",
#    "shap>=0.41.0",
#    "ruptures>=1.1.8",
#    "tslearn>=0.6.1",
#    "kshape>=1.0.6",
#    "sktime>=0.29.0",
#    "scikit-learn-extra>=0.3.0"
#    ]

dependencies = [
    "numpy>=1.22.4,<2.0",
    "pandas==1.5.3",
    "scipy>=1.11.4",
    "scikit-learn>=1.1.1",
    "optuna>=4.2.0",
    "interpret==0.6.9",
    "interpret-core==0.6.9",
]

requires-python = ">=3.8"


[project.optional-dependencies]
benchmark = ["tensorflow==2.18.0", "lingam==1.9.1", "openml==0.15.1"] # Optional dependencies for benchmarking in current requirements file

[tool.setuptools.packages.find]
include = ["acfx*"]  # Default: Include `acfx` and subpackages
exclude = ["acfx.benchmark", "acfx.tests"]  # Exclude `acfx.model` by default

[project.urls]
Homepage = "https://github.com/sbobek/acfx"
Documentation = "https://acfx.readthedocs.org"
Issues = "https://github.com/sbobek/acfx/issues"
