[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acfx"
version = "0.3.0"
description = "Actionable Counterfactual eXplanations"
readme = "README.md"
authors = [
    { name = "Szymon Bobek", email = "szymon.bobek@gmail.com" },
    { name = "Piotr Kubacki", email = "piotr.kubacki00@gmail.com"}
]
license = "MIT"
keywords = ["xai", "tabular data","explainability", "model-agnostic", "counterfactual", "causal"]

dependencies = [
    "numpy==1.26.0",
    "pandas==1.5.3",
    "scipy==1.11.4",
    "scikit-learn==1.6.1",
    "optuna==4.2.0",
    "interpret==0.6.9",
    "interpret-core==0.6.9",
    "overrides==7.4.0"
]

requires-python = ">=3.8"


[project.optional-dependencies]
benchmark = ["tensorflow==2.14.0", "lingam==1.9.1", "openml==0.15.1", "alibi==0.9.6", "lux-explainer==1.3.2",
    "networkx==3.4.2", "cfnow==0.0.6", "dice-ml==0.11", "pydotplus==2.0.2", "deap==1.4.2", "pydot==3.0.4"]
streamlit-app = ["streamlit==1.48.0", "streamlit-sortables==0.3.1", "networkx==3.4.2", "lingam==1.9.1"]

[tool.setuptools.packages.find]
include = ["acfx*"]
exclude = ["acfx.benchmark*", "acfx.tests"]

[project.urls]
Homepage = "https://github.com/sbobek/acfx"
Documentation = "https://acfx.readthedocs.org"
Issues = "https://github.com/sbobek/acfx/issues"
